--- a/CarInsurance/Views/Admin/Create.cshtml
+++ b/CarInsurance/Views/Admin/Create.cshtml
@@ -102,7 +102,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Quote, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Quote, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Quote)
                 @Html.ValidationMessageFor(model => model.Quote, "", new { @class = "text-danger" })
             </div>
         </div>
