--- a/CarInsurance/Views/Shared/_Layout.cshtml
+++ b/CarInsurance/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Insuree", "Index", "Insuree")</li> <!-- Changed link to insurees for quick access -->
-                    <li>@Html.ActionLink("Admin", "Index", "Admin")</li> <!-- Same for admin -->
+                    <li>@Html.ActionLink("Admin", "Admin", "Insuree")</li> <!-- Same for admin -->
                 </ul>
             </div>
         </div>
